# CG

./: .gitignore
Labs/: CMakeLists.txt
Labs/Tasks/: tasks.txt
Labs/Tests/Triangle/: CMakeLists.txt  main.cpp
Labs/Tests/window/: CMakeLists.txt  main.cpp
Labs/glad/include/glad/: glad.h
Labs/glad/src/: glad.c
Labs/lab1/: CMakeLists.txt  circle.cpp
Labs/lab2/: CMakeLists.txt
Labs/lab2/Shaders/: fragment_shader.glsl
Labs/lab2/include/: Scene_with_multiple_lights.h  Shape.h  Window.h
Labs/lab2/src/: Scene_with_multiple_lights.cpp  Shape.cpp  Window.cpp
Labs/lab2/test/: CMakeLists.txt  main.cpp
Test_folder/: Makefile  qt_example  qt_example.pro
Test_folder/OpenGL/: main  main.cpp
Test_folder/Test/: main.cpp
